--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Section produits -->
   <div id="products">
     <div class="product">
-      <img src="produit1.jpg" alt="Robe été">
+      <img src="img1.png" alt="Robe été">
       <h2>Robe été</h2>
       <p>Prix: 25€</p>
       <button onclick="addToCart('Robe été')">Ajouter au panier</button>
@@ -53,3 +53,4 @@
 
 </body>
 </html>
+
