--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     </div>
 
     <div class="product">
-      <img src="produit2.jpg" alt="T-shirt mode">
+      <img src="img2.png" alt="T-shirt mode">
       <h2>T-shirt mode</h2>
       <p>Prix: 15€</p>
       <button onclick="addToCart('T-shirt mode')">Ajouter au panier</button>
     </div>
 
     <div class="product">
-      <img src="produit3.jpg" alt="Sac tendance">
+      <img src="img3.png" alt="Sac tendance">
       <h2>Sac tendance</h2>
       <p>Prix: 30€</p>
       <button onclick="addToCart('Sac tendance')">Ajouter au panier</button>
     </div>
 
     <div class="product">
-      <img src="produit4.jpg" alt="Chaussures">
+      <img src="img1.png" alt="Chaussures">
       <h2>Chaussures</h2>
       <p>Prix: 40€</p>
       <button onclick="addToCart('Chaussures')">Ajouter au panier</button>
@@ -53,4 +53,5 @@
 
 </body>
 </html>
+
 
